# Mindfuck

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: edge_commands.rs  mod.rs  node_commands.rs  world_commands.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/db/models/: edges.rs  embeddings.rs  mod.rs  nodes.rs  worlds.rs
src/components/graph/: ActionBar.tsx  AddNodeButton.tsx  GraphCanvas.tsx  TimelineBar.tsx
src/components/layout/: ChatPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  TopBar.tsx
src/components/node-editor/: MarkdownRenderer.tsx  NodeModal.tsx
src/lib/: constants.ts
src/services/: db.ts  llm.ts
src/stores/: useChatStore.ts  useGraphStore.ts  useSettingsStore.ts  useWorldStore.ts
src/types/: edge.ts  llm.ts  node.ts  world.ts
