[package]
name = "mindfuck"
version = "0.1.0"
description = "3D Knowledge Graph with LLM Integration"
authors = ["you"]
edition = "2021"

[lib]
name = "mindfuck_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
zerocopy = { version = "0.7", features = ["derive"] }
